--- a/docs/docs/cmd/aad/user/user-license-list.mdx
+++ b/docs/docs/cmd/aad/user/user-license-list.mdx
@@ -79,9 +79,9 @@ m365 aad user license list --userId 59f80e08-24b1-41f8-8586-16765fd830d3
   <TabItem value="Text">
 
   ```text
-  id           : x4s03usaBkSMs5fbAhyttK6cK8RP6rdKlxeBV2I1zKw
-  skuId        : c42b9cae-ea4f-4ab7-9717-81576235ccac
-  skuPartNumber: DEVELOPERPACK_E5
+  id                                           skuId                                 skuPartNumber
+  -------------------------------------------  ------------------------------------  -----------------------------------------
+  x4s03usaBkSMs5fbAhyttK6cK8RP6rdKlxeBV2I1zKw  c42b9cae-ea4f-4ab7-9717-81576235ccac  DEVELOPERPACK_E5
   ```
 
   </TabItem>
@@ -107,9 +107,7 @@ m365 aad user license list --userId 59f80e08-24b1-41f8-8586-16765fd830d3
   id | x4s03usaBkSMs5fbAhyttK6cK8RP6rdKlxeBV2I1zKw
   skuId | c42b9cae-ea4f-4ab7-9717-81576235ccac
   skuPartNumber | DEVELOPERPACK\_E5
-  servicePlans | [{"servicePlanId":"7547a3fe-08ee-4ccb-b430-5077c5041653","servicePlanName":"YAMMER\_ENTERPRISE","provisioningStatus":"Success","appliesTo":"User"}]
   ```
 
   </TabItem>
 </Tabs>
-
