--- a/docs/docs/cmd/flow/environment/environment-list.mdx
+++ b/docs/docs/cmd/flow/environment/environment-list.mdx
@@ -26,7 +26,7 @@ This command is based on an API that is currently in preview and is subject to c
 
 ## Examples
 
-List Microsoft Flow environments in the current tenant
+List Microsoft Flow environments in the current tenant.
 
 ```sh
 m365 flow environment list
@@ -127,8 +127,8 @@ m365 flow environment list
   <TabItem value="CSV">
 
   ```csv
-  name,displayName
-  d87a7535-dd31-4437-bfe1-95340acd55c5,Contoso Environment
+  name,location,type,id,displayName
+  d87a7535-dd31-4437-bfe1-95340acd55c5,india,Microsoft.ProcessSimple/environments,/providers/Microsoft.ProcessSimple/environments/d87a7535-dd31-4437-bfe1-95340acd55c5,Contoso Environment
   ```
 
   </TabItem>
@@ -152,4 +152,3 @@ m365 flow environment list
 
   </TabItem>
 </Tabs>
-
