--- a/docs/docs/cmd/flow/owner/owner-list.mdx
+++ b/docs/docs/cmd/flow/owner/owner-list.mdx
@@ -29,13 +29,13 @@ m365 flow owner list [options]
 
 ## Examples
 
-Gets the owners by the name of the Power Automate flow within a specified environment
+Gets the owners by the name of the Power Automate flow within a specified environment.
 
 ```sh
 m365 flow owner list --environmentName Default-c5a5d746-3520-453f-8a69-780f8e44917e --flowName 72f2be4a-78c1-4220-a048-dbf557296a72
 ```
 
-Gets the owners by the name of the Power Automate flow within a specified environment with admin privileges
+Gets the owners by the name of the Power Automate flow within a specified environment with admin privileges.
 
 ```sh
 m365 flow owner list --environmentName Default-c5a5d746-3520-453f-8a69-780f8e44917e --flowName 72f2be4a-78c1-4220-a048-dbf557296a72 --asAdmin
@@ -96,7 +96,6 @@ m365 flow owner list --environmentName Default-c5a5d746-3520-453f-8a69-780f8e449
   name | fe36f75e-c103-410b-a18a-2bf6df06ac3a
   id | /providers/Microsoft.ProcessSimple/environments/Default-c5a5d746-3520-453f-8a69-780f8e44917e/flows/72f2be4a-78c1-4220-a048-dbf557296a72/permissions/fe36f75e-c103-410b-a18a-2bf6df06ac3a
   type | /providers/Microsoft.ProcessSimple/environments/flows/permissions
-  properties | {"roleName":"Owner","permissionType":"Principal","principal":{"id":"fe36f75e-c103-410b-a18a-2bf6df06ac3a","type":"User"}}
   ```
 
   </TabItem>
