--- a/docs/docs/cmd/onenote/page/page-list.mdx
+++ b/docs/docs/cmd/onenote/page/page-list.mdx
@@ -39,37 +39,37 @@ When we don't specify either `userId`, `userName`, `groupId`, `groupName` or `we
 
 ## Examples
 
-List Microsoft OneNote pages for the currently logged in user
+List Microsoft OneNote pages for the currently logged in user.
 
 ```sh
 m365 onenote page list
 ```
 
-List Microsoft OneNote pages in a specific group specified by id
+List Microsoft OneNote pages in a specific group specified by id.
 
 ```sh
 m365 onenote page list --groupId 233e43d0-dc6a-482e-9b4e-0de7a7bce9b4
 ```
 
-List Microsoft OneNote pages in a specific group specified by name
+List Microsoft OneNote pages in a specific group specified by name.
 
 ```sh
 m365 onenote page list --groupName "MyGroup"
 ```
 
-List Microsoft OneNote pages for a specific user specified by name
+List Microsoft OneNote pages for a specific user specified by name.
 
 ```sh
 m365 onenote page list --userName user1@contoso.onmicrosoft.com
 ```
 
-List Microsoft OneNote pages for a specific user specified by id
+List Microsoft OneNote pages for a specific user specified by id.
 
 ```sh
 m365 onenote page list --userId 2609af39-7775-4f94-a3dc-0dd67657e900
 ```
 
-List Microsoft OneNote pages for a specific site
+List Microsoft OneNote pages for a specific site.
 
 ```sh
 m365 onenote page list --webUrl https://contoso.sharepoint.com/sites/testsite
@@ -145,10 +145,7 @@ m365 onenote page list --webUrl https://contoso.sharepoint.com/sites/testsite
   createdByAppId |
   contentUrl | https://graph.microsoft.com/v1.0/users/john@contoso.com/onenote/pages/1-a26aaec43ed348bd82edf4eb44e73d6c!68-3eb21088-b613-4698-98df-92a7d34e0678/content
   lastModifiedDateTime | 2023-01-07T10:57:17Z
-  links | { "oneNoteClientUrl": { "href": "onenote:https://contoso-my.sharepoint.com/personal/john_contoso_com/Documents/Notitieblokken/My%20OneNote/Test.one#Page%20B& -id=94cacaca-d6b5-428d-b967-d3cf01b95c28&page-id=46a1b220-7ffd-4512-a571-55322097c08d&end" }, "oneNoteWebUrl": { "href": "https://contoso-my.sharepoint.com/personal/john_contoso_com/Documents/Notitieblokken/My%20OneNote?wd=target%28Test.one%7C94cacaca-d6b5-428d-b967-d3cf01b95c28%2FPage%20B%7C46a1b220-7ffd-4512-a571-55322097c08d%2F%29"}}
-  parentSection | {"id":"1-3eb21088-b613-4698-98df-92a7d34e0678","displayName":"Test","self":"https://graph.microsoft.com/v1.0/users/john@contoso.com/onenote/sections/1-3eb21088-b613-4698-98df-92a7d34e0678"}
   ```
 
   </TabItem>
 </Tabs>
-
