--- a/docs/docs/cmd/outlook/room/room-list.mdx
+++ b/docs/docs/cmd/outlook/room/room-list.mdx
@@ -16,20 +16,20 @@ m365 outlook room list [options]
 
 ```md definition-list
 `--roomlistEmail [roomlistEmail]`
-: Use to filter returned rooms by their roomlist email (eg. bldg2@contoso.com)
+: Use to filter returned rooms by their roomlist email (eg. bldg2@contoso.com).
 ```
 
 <Global />
 
 ## Examples
 
-Get all the rooms
+Get all the rooms.
 
 ```sh
 m365 outlook room list
 ```
 
-Get all the rooms of specified roomlist e-mail address
+Get all the rooms of specified roomlist e-mail address.
 
 ```sh
 m365 outlook room list --roomlistEmail "bldg2@contoso.com"
@@ -116,10 +116,7 @@ m365 outlook room list --roomlistEmail "bldg2@contoso.com"
   videoDeviceName | null
   displayDeviceName | null
   isWheelChairAccessible | false
-  tags | []
-  address | {"street":"Microsoft Way 1","city":"Redmond","state":"Washington","countryOrRegion":"US","postalCode":"98053"}
   ```
 
   </TabItem>
 </Tabs>
-
