--- a/docs/docs/cmd/pp/dataverse/dataverse-table-list.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-list.mdx
@@ -16,7 +16,7 @@ m365 pp dataverse table list [options]
 
 ```md definition-list
 `-e, --environmentName <environmentName>`
-: The name of the environment to list all tables for
+: The name of the environment to list all tables for.
 
 `--asAdmin`
 : Set, to retrieve the dataverse tables as admin for environments you are not a member of.
@@ -26,13 +26,13 @@ m365 pp dataverse table list [options]
 
 ## Examples
 
-List all tables for the given environment
+List all tables for the given environment.
 
 ```sh
 m365 pp dataverse table list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
 ```
 
-List all tables for the given environment as Admin
+List all tables for the given environment as Admin.
 
 ```sh
 m365 pp dataverse table list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --asAdmin
@@ -145,18 +145,7 @@ m365 pp dataverse table list --environmentName "Default-2ca3eaa5-140f-4175-8261-
   EntitySetName | aadusers
   IsActivity | false
   DataProviderId | 54629ed7-0cd3-4c85-9b6c-ea5f8548a9aa
-  IsRenameable | {"Value":true,"CanBeChanged":false,"ManagedPropertyLogicalName":"isrenameable"}
-  IsCustomizable | {"Value":true,"CanBeChanged":false,"ManagedPropertyLogicalName":"iscustomizable"}
-  CanCreateForms | {"Value":true,"CanBeChanged":false,"ManagedPropertyLogicalName":"cancreateforms"}
-  CanCreateViews | {"Value":true,"CanBeChanged":false,"ManagedPropertyLogicalName":"cancreateviews"}
-  CanCreateCharts | {"Value":false,"CanBeChanged":false,"ManagedPropertyLogicalName":"cancreatecharts"}
-  CanCreateAttributes | {"Value":true,"CanBeChanged":false,"ManagedPropertyLogicalName":"cancreateattributes"}
-  CanChangeTrackingBeEnabled | {"Value":false,"CanBeChanged":false,"ManagedPropertyLogicalName":"canchangetrackingbeenabled"}
-  CanModifyAdditionalSettings | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canmodifyadditionalsettings"}
-  CanChangeHierarchicalRelationship | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canchangehierarchicalrelationship"}
-  CanEnableSyncToExternalSearchIndex | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canenablesynctoexternalsearchindex"}
   ```
 
   </TabItem>
 </Tabs>
-
