--- a/docs/docs/cmd/purview/retentionevent/retentionevent-get.mdx
+++ b/docs/docs/cmd/purview/retentionevent/retentionevent-get.mdx
@@ -23,7 +23,7 @@ m365 purview retentionevent get [options]
 
 ## Examples
 
-Get a retention event by id
+Get a retention event by id.
 
 ```sh
 m365 purview retentionevent get --id c37d695e-d581-4ae9-82a0-9364eba4291e
@@ -130,8 +130,6 @@ This command is based on an API that is currently in preview and is subject to c
   createdDateTime | 2023-02-01T09:17:40Z
   lastModifiedDateTime | 2023-02-01T09:17:40Z
   id | c37d695e-d581-4ae9-82a0-9364eba4291e
-  createdBy | {"user":{"id":null,"displayName":"John Doe"}}
-  lastModifiedBy | {"user":{"id":null,"displayName":"John Doe"}}
   ```
 
   </TabItem>
