--- a/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-get.mdx
+++ b/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-get.mdx
@@ -31,7 +31,7 @@ This command is based on an API that is currently in preview and is subject to c
 
 ## Examples
 
-Get a retention event type by id
+Get a retention event type by id.
 
 ```sh
 m365 purview retentioneventtype get --id c37d695e-d581-4ae9-82a0-9364eba4291e
@@ -102,8 +102,6 @@ m365 purview retentioneventtype get --id c37d695e-d581-4ae9-82a0-9364eba4291e
   createdDateTime | 2023-01-29T09:30:42Z
   lastModifiedDateTime | 2023-01-29T09:30:42Z
   id | c37d695e-d581-4ae9-82a0-9364eba4291e
-  createdBy | {"user":{"id":null,"displayName":"John Doe"}}
-  lastModifiedBy | {"user":{"id":null,"displayName":"John Doe"}}
   ```
 
   </TabItem>
