--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
@@ -19,7 +19,7 @@ m365 spo applicationcustomizer list [options]
 : The url of the site.
 
 `-s, --scope [scope]`
-: Scope of the application customizers. Allowed values `Site`, `Web`, `All`. Defaults to `All`
+: Scope of the application customizers. Allowed values `Site`, `Web`, `All`. Defaults to `All`.
 ```
 
 <Global />
@@ -97,7 +97,6 @@ m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/site
   Property | Value
   ---------|-------
   ClientSideComponentId | 4358e70e-ec3c-4713-beb6-39c88f7621d1
-  ClientSideComponentProperties | {"listTitle":"News","listViewTitle":"Published News"}
   CommandUIExtension | null
   Description | null
   Group | null
@@ -105,10 +104,8 @@ m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/site
   Id | f405303c-6048-4636-9660-1b7b2cadaef9
   ImageUrl | null
   Location | ClientSideExtension.ApplicationCustomizer
-  Name | {f405303c-6048-4636-9660-1b7b2cadaef9}
   RegistrationId | null
   RegistrationType | 0
-  Rights | {"High":0,"Low":0}
   Scope | 3
   ScriptBlock | null
   ScriptSrc | null
@@ -120,4 +117,3 @@ m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/site
 
   </TabItem>
 </Tabs>
-
