--- a/docs/docs/cmd/spo/commandset/commandset-add.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-add.mdx
@@ -16,7 +16,7 @@ m365 spo commandset add [options]
 
 ```md definition-list
 `-t, --title <title>`
-: The title of the ListView Command Set
+: The title of the ListView Command Set.
 
 `-u, --webUrl <webUrl>`
 : The site to add the ListView Command Set.
@@ -160,7 +160,6 @@ m365 spo commandset add --title "Some customizer" --clientSideComponentId 799883
   Name | null
   RegistrationId | 100
   RegistrationType | 0
-  Rights | {"High":"0","Low":"0"}
   Scope | 2
   ScriptBlock | null
   ScriptSrc | null
@@ -172,4 +171,3 @@ m365 spo commandset add --title "Some customizer" --clientSideComponentId 799883
 
   </TabItem>
 </Tabs>
-
