--- a/docs/docs/cmd/spo/commandset/commandset-list.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-list.mdx
@@ -19,7 +19,7 @@ m365 spo commandset list [options]
 : The url of the site.
 
 `-s, --scope [scope]`
-: Scope of the ListView Command Sets. Allowed values `Site`, `Web`, `All`. Default to `All`
+: Scope of the ListView Command Sets. Allowed values `Site`, `Web`, `All`. Default to `All`.
 ```
 
 <Global />
@@ -105,10 +105,8 @@ m365 spo commandset list --webUrl https://contoso.sharepoint.com/sites/sales
   Id | e7000aef-f756-4997-9420-01cc84f9ac9c
   ImageUrl | null
   Location | ClientSideExtension.ListViewCommandSet.CommandBar
-  Name | {e7000aef-f756-4997-9420-01cc84f9ac9c}
   RegistrationId | 100
   RegistrationType | 0
-  Rights | {"High":0,"Low":0}
   Scope | 2
   ScriptBlock | null
   ScriptSrc | null
@@ -120,4 +118,3 @@ m365 spo commandset list --webUrl https://contoso.sharepoint.com/sites/sales
 
   </TabItem>
 </Tabs>
-
