--- a/docs/docs/cmd/spo/page/page-get.mdx
+++ b/docs/docs/cmd/spo/page/page-get.mdx
@@ -33,13 +33,13 @@ If the specified name doesn't refer to an existing modern page, you will get a `
 
 ## Examples
 
-Get information about the modern page
+Get information about the modern page.
 
 ```sh
 m365 spo page get --webUrl https://contoso.sharepoint.com/sites/team-a --name home.aspx
 ```
 
-Get all the metadata from the modern page, without the section and control count information
+Get all the metadata from the modern page, without the section and control count information.
 
 ```sh
 m365 spo page get --webUrl https://contoso.sharepoint.com/sites/team-a --name home.aspx --metadataOnly
@@ -157,7 +157,6 @@ m365 spo page get --webUrl https://contoso.sharepoint.com/sites/team-a --name ho
   ---------|-------
   CheckInComment | 
   CheckOutType | 2
-  ContentTag | {86CE2216-83F1-4AB4-9B7E-FFBDCF890992},14,1
   CustomizedPageStatus | 1
   ETag | "{86CE2216-83F1-4AB4-9B7E-FFBDCF890992},14"
   Exists | true
@@ -185,4 +184,3 @@ m365 spo page get --webUrl https://contoso.sharepoint.com/sites/team-a --name ho
 
   </TabItem>
 </Tabs>
-
