--- a/docs/docs/cmd/outlook/roomlist/roomlist-list.mdx
+++ b/docs/docs/cmd/outlook/roomlist/roomlist-list.mdx
@@ -18,7 +18,7 @@ m365 outlook roomlist list [options]
 
 ## Examples
 
-Get all roomlists in your tenant
+Get all roomlists in your tenant.
 
 ```sh
 m365 outlook roomlist list
@@ -83,9 +83,7 @@ m365 outlook roomlist list
   displayName | Rooms building 1
   geoCoordinates | null
   phone |
-  address | {"street":"Microsoft Way 1","city":"Redmond","state":"Washington","countryOrRegion":"US","postalCode":"98053"}
   ```
 
   </TabItem>
 </Tabs>
-
