--- a/docs/docs/cmd/planner/plan/plan-set.mdx
+++ b/docs/docs/cmd/planner/plan/plan-set.mdx
@@ -59,19 +59,19 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 ## Examples
 
-Updates a Microsoft Planner plan title to New Title
+Updates a Microsoft Planner plan title.
 
 ```sh
 m365 planner plan set --id 'gndWOTSK60GfPQfiDDj43JgACDCb' --newTitle 'New Title'
 ```
 
-Share a Microsoft Planner plan owned by the group, with the users
+Share a Microsoft Planner plan owned by the group, with the users.
 
 ```sh
 m365 planner plan set --title 'Plan Title' --ownerGroupName 'My Group' --shareWithUserNames 'user1@contoso.com,user2@contoso.com'
 ```
 
-Updates a Microsoft Planner plan category labels
+Updates a Microsoft Planner plan category labels.
 
 ```sh
 m365 planner plan set --id 'gndWOTSK60GfPQfiDDj43JgACDCb' --category21 'ToDo' --category25 'Urgent'
@@ -142,8 +142,6 @@ m365 planner plan set --id 'gndWOTSK60GfPQfiDDj43JgACDCb' --category21 'ToDo' --
   owner | ebf3b108-5234-4e22-b93d-656d7dae5874
   title | My Planner Plan
   id | xqQg5FS2LkCp935s-FIFm2QAFkHM
-  createdBy | {"user":{"displayName":null,"id":"95e27074-6c4a-447a-aa24-9d718a0b86fa"},"application":{"displayName":null,"id":"ebf3b108-5234-4e22-b93d-656d7dae5874"}}
-  container | {"containerId":"ebf3b108-5234-4e22-b93d-656d7dae5874","type":"group","url":"https://graph.microsoft.com/v1.0/groups/ebf3b108-5234-4e22-b93d-656d7dae5874"}
   ```
 
   </TabItem>
@@ -245,10 +243,6 @@ When we make use of the option `shareWithUserIds` or `shareWithUserNames` the re
   owner | ebf3b108-5234-4e22-b93d-656d7dae5874
   title | My Planner Plan
   id | xqQg5FS2LkCp935s-FIFm2QAFkHM
-  createdBy | {"user":{"displayName":null,"id":"dd8b99a7-77c6-4238-a609-396d27844921"},"application":{"displayName":null,"id":"31359c7f-bd7e-475c-86db-fdb8c937548e"}}
-  container | {"containerId":"ebf3b108-5234-4e22-b93d-656d7dae5874","type":"group","url":"https://graph.microsoft.com/v1.0/groups/ebf3b108-5234-4e22-b93d-656d7dae5874"}
-  sharedWith | {"ebf3b108-5234-4e22-b93d-656d7dae5874":true,"6463a5ce-2119-4198-9f2a-628761df4a62":true}
-  categoryDescriptions | {"category1":null,"category2":null,"category3":null,"category4":null,"category5":null,"category6":null,"category7":null,"category8":null,"category9":null,"category10":null,"category11":null,"category12":null,"category13":null,"category14":null,"category15":null,"category16":null,"category17":null,"category18":null,"category19":null,"category20":null,"category21":null,"category22":null,"category23":null,"category24":null,"category25":null}
   ```
 
   </TabItem>
