--- a/docs/docs/cmd/planner/task/task-checklistitem-add.mdx
+++ b/docs/docs/cmd/planner/task/task-checklistitem-add.mdx
@@ -29,13 +29,13 @@ m365 planner task checklistitem add [options]
 
 ## Examples
 
-Adds an unchecked checklist item with title _My checklist item_ to a Microsoft Planner task with ID _2Vf8JHgsBUiIf-nuvBtv-ZgAAYw2_
+Adds an unchecked checklist item with the specified title to a Microsoft Planner task with the specified ID.
 
 ```sh
 m365 planner task checklistitem add --taskId 2Vf8JHgsBUiIf-nuvBtv-ZgAAYw2 --title "My checklist item"
 ```
 
-Adds a checked checklist item with title _My checklist item_ to a Microsoft Planner task with ID _2Vf8JHgsBUiIf-nuvBtv-ZgAAYw2_
+Adds a checked checklist item with the specified title to a Microsoft Planner task with the specified ID.
 
 ```sh
 m365 planner task checklistitem add --taskId 2Vf8JHgsBUiIf-nuvBtv-ZgAAYw2 --title "My checklist item" --isChecked
@@ -97,9 +97,7 @@ m365 planner task checklistitem add --taskId 2Vf8JHgsBUiIf-nuvBtv-ZgAAYw2 --titl
   title | Communicate with customer
   orderHint | 8585269209601773376
   lastModifiedDateTime | 2023-01-25T22:32:05.3002431Z
-  lastModifiedBy | {"user":{"displayName":null,"id":"b2091e18-7882-4efe-b7d1-90703f5a5c65"}}
   ```
 
   </TabItem>
 </Tabs>
-
