--- a/docs/docs/cmd/planner/task/task-checklistitem-list.mdx
+++ b/docs/docs/cmd/planner/task/task-checklistitem-list.mdx
@@ -16,7 +16,7 @@ m365 planner task checklistitem list [options]
 
 ```md definition-list
 `-i, --taskId <taskId>`
-: ID of the task
+: ID of the task.
 ```
 
 <Global />
@@ -85,9 +85,7 @@ m365 planner task checklistitem list --taskId 'vzCcZoOv-U27PwydxHB8opcADJo-'
   title | Communicate with customer
   orderHint | 8585269209601773376
   lastModifiedDateTime | 2023-01-25T22:32:05.3002431Z
-  lastModifiedBy | {"user":{"displayName":null,"id":"b2091e18-7882-4efe-b7d1-90703f5a5c65"}}
   ```
 
   </TabItem>
 </Tabs>
-
