--- a/docs/docs/cmd/planner/task/task-list.mdx
+++ b/docs/docs/cmd/planner/task/task-list.mdx
@@ -55,7 +55,7 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 ## Examples
 
-List tasks for the currently logged in user
+List tasks for the currently logged in user.
 
 ```sh
 m365 planner task list
@@ -188,11 +188,7 @@ m365 planner task list --bucketName "My Bucket" --rosterId "DjL5xiKO10qut8LQgztp
   conversationThreadId | null
   priority | 5
   id | OopX1ANphEu7Lm4-0tVtl5cAFRGQ
-  createdBy | {"user":{"displayName":null,"id":"b2091e18-7882-4efe-b7d1-90703f5a5c65"},"application":{"displayName":null,"id":"31359c7f-bd7e-475c-86db-fdb8c937548e"}}
-  appliedCategories | {}
-  assignments | {}
   ```
 
   </TabItem>
 </Tabs>
-
