--- a/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-get.mdx
+++ b/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-get.mdx
@@ -16,29 +16,29 @@ m365 pp aibuildermodel get [options]
 
 ```md definition-list
 `-e, --environmentName <environmentName>`
-: The name of the environment
+: The name of the environment.
 
 `-i, --id [id]`
-: The id of the AI Builder model. Specify either `id` or `name` but not both
+: The id of the AI Builder model. Specify either `id` or `name` but not both.
 
 `-n, --name [name]`
-: The name of the AI Builder model. Specify either `id` or `name` but not both
+: The name of the AI Builder model. Specify either `id` or `name` but not both.
 
 `--asAdmin`
-: Run the command as admin for environments you do not have explicitly assigned permissions to
+: Run the command as admin for environments you do not have explicitly assigned permissions to.
 ```
 
 <Global />
 
 ## Examples
 
-Get an AI Builder model in a specific environment
+Get an AI Builder model in a specific environment.
 
 ```sh
 m365 pp aibuildermodel get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "Document Processing 11/29/2022, 12:58:43 PM"
 ```
 
-Get an AI Builder models in a specific environment by id as admin
+Get an AI Builder models in a specific environment by id as admin.
 
 ```sh
 m365 pp aibuildermodel get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "08ffffbe-ec1c-4e64-b64b-dd1db926c613" --asAdmin
@@ -148,9 +148,7 @@ m365 pp aibuildermodel get --environmentName "Default-d87a7535-dd31-4437-bfe1-95
   \_createdonbehalfby\_value | null
   \_owningteam\_value | null
   timezoneruleversionnumber | null
-  iscustomizable | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"iscustomizableanddeletable"}
   ```
 
   </TabItem>
 </Tabs>
-
