--- a/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-list.mdx
+++ b/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-list.mdx
@@ -16,23 +16,23 @@ m365 pp aibuildermodel list [options]
 
 ```md definition-list
 `-e, --environmentName <environmentName>`
-: The name of the environment
+: The name of the environment.
 
 `--asAdmin`
-: Run the command as admin for environments you do not have explicitly assigned permissions to
+: Run the command as admin for environments you do not have explicitly assigned permissions to.
 ```
 
 <Global />
 
 ## Examples
 
-List all AI Builder models in a specific environment
+List all AI Builder models in a specific environment.
 
 ```sh
 m365 pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
 ```
 
-List all AI Builder models in a specific environment as admin
+List all AI Builder models in a specific environment as admin.
 
 ```sh
 m365 pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --asAdmin
@@ -115,7 +115,6 @@ m365 pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-9
   ---------|-------
   statecode | 0
   \_msdyn\_templateid\_value | 10707e4e-1d56-e911-8194-000d3a6cd5a5
-  msdyn\_modelcreationcontext | {}
   createdon | 2022-11-29T11:58:45Z
   \_ownerid\_value | 5fa787c1-1c4d-ed11-bba1-000d3a2caf7f
   modifiedon | 2022-11-29T11:58:45Z
@@ -144,9 +143,7 @@ m365 pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-9
   \_createdonbehalfby\_value | null
   \_owningteam\_value | null
   timezoneruleversionnumber | null
-  iscustomizable | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"iscustomizableanddeletable"}
   ```
 
   </TabItem>
 </Tabs>
-
