--- a/docs/docs/cmd/pp/card/card-get.mdx
+++ b/docs/docs/cmd/pp/card/card-get.mdx
@@ -32,25 +32,25 @@ m365 pp card get [options]
 
 ## Examples
 
-Get a specific card in a specific environment based on name
+Get a specific card in a specific environment based on name.
 
 ```sh
 m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card"
 ```
 
-Get a specific card in a specific environment based on name as admin
+Get a specific card in a specific environment based on name as admin.
 
 ```sh
 m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --asAdmin
 ```
 
-Get a specific card in a specific environment based on id
+Get a specific card in a specific environment based on id.
 
 ```sh
 m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa"
 ```
 
-Get a specific card in a specific environment based on id as admin
+Get a specific card in a specific environment based on id as admin.
 
 ```sh
 m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --asAdmin
@@ -166,7 +166,6 @@ m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5
   \_owningbusinessunit\_value | b419f090-fe22-ec11-b6e5-000d3ab596a1
   hiddentags | null
   description |
-  appdefinition | {"screens":{"main":{"template":{"type":"AdaptiveCard","body":[{"type":"TextBlock","size":"Medium","weight":"bolder","text":"Your card title goes here"},{"type":"TextBlock","text":"Add and remove element to customize your new card.","wrap":true}],"actions":[],"$schema":"http://adaptivecards.io/schemas/1.4.0/adaptive-card.json","version":"1.4"},"verbs":{"submit":"echo"}}},"sampleData":{"main":{}},"connections":{},"variables":{},"flows":{}}
   statuscode | 1
   remixsourceid | null
   sizes | null
@@ -176,10 +175,7 @@ m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5
   \_ownerid\_value | 4f175d04-b952-ed11-bba2-000d3adf774e
   publishsourceid | null
   timezoneruleversionnumber | null
-  iscustomizable | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"iscustomizableanddeletable"}
-  owninguser | {"azureactivedirectoryobjectid":"78ccf530-bbf0-47e4-aae6-da5f8c6fb142","fullname":"# John Doe","systemuserid":"4f175d04-b952-ed11-bba2-000d3adf774e","ownerid":"4f175d04-b952-ed11-bba2-000d3adf774e"}
   ```
 
   </TabItem>
 </Tabs>
-
