--- a/docs/docs/cmd/pp/chatbot/chatbot-get.mdx
+++ b/docs/docs/cmd/pp/chatbot/chatbot-get.mdx
@@ -32,25 +32,25 @@ m365 pp chatbot get [options]
 
 ## Examples
 
-Get a specific chatbot in a specific environment based on name
+Get a specific chatbot in a specific environment based on name.
 
 ```sh
 m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Chatbot"
 ```
 
-Get a specific chatbot in a specific environment based on name as admin
+Get a specific chatbot in a specific environment based on name as admin.
 
 ```sh
 m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Chatbot" --asAdmin
 ```
 
-Get a specific chatbot in a specific environment based on id
+Get a specific chatbot in a specific environment based on id.
 
 ```sh
 m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893"
 ```
 
-Get a specific chatbot in a specific environment based on id as admin
+Get a specific chatbot in a specific environment based on id as admin.
 
 ```sh
 m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893" --asAdmin
@@ -184,9 +184,7 @@ m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd5
   supportedlanguages | null
   \_owningteam\_value | null
   timezoneruleversionnumber | null
-  iscustomizable | {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"iscustomizableanddeletable"}
   ```
 
   </TabItem>
 </Tabs>
-
