--- a/docs/docs/cmd/purview/retentionevent/retentionevent-list.mdx
+++ b/docs/docs/cmd/purview/retentionevent/retentionevent-list.mdx
@@ -18,7 +18,7 @@ m365 purview retentionevent list [options]
 
 ## Examples
 
-Get a list of retention events
+Get a list of retention events.
 
 ```sh
 m365 purview retentionevent list
@@ -103,10 +103,6 @@ This command is based on a Microsoft Graph API that is currently in preview and 
   createdDateTime | 2023-02-03T13:51:40Z
   lastModifiedDateTime | 2023-02-03T13:51:40Z
   id | 7248cfa8-c03a-4ec1-49a4-08db05edc686
-  eventQueries | []
-  eventPropagationResults | []
-  createdBy | {"user":{"id":null,"displayName":"John Doe"}}
-  lastModifiedBy | {"user":{"id":null,"displayName":"John Doe"}}
   ```
 
   </TabItem>
