--- a/docs/docs/cmd/spo/listitem/listitem-attachment-list.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-attachment-list.mdx
@@ -16,38 +16,38 @@ m365 spo listitem attachment list [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the site from which the item should be retrieved
+: URL of the site from which the item should be retrieved.
 
 `--listId [listId]`
-: ID of the list where the item should be retrieved. Specify either `listTitle`, `listId` or `listUrl`
+: ID of the list where the item should be retrieved. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listTitle [listTitle]`
-: Title of the list where the item should be retrieved. Specify either `listTitle`, `listId` or `listUrl`
+: Title of the list where the item should be retrieved. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listUrl [listUrl]`
-: Server- or site-relative URL of the list. Specify either `listTitle`, `listId` or `listUrl`
+: Server- or site-relative URL of the list. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listItemId <listItemId>`
-: ID of the list item
+: ID of the list item.
 ```
 
 <Global />
 
 ## Examples
 
-Gets the attachments from list item with listItemId _147_ in list with title _Demo List_ in site _https://contoso.sharepoint.com/sites/project-x_
+Gets the attachments from list item with the specified listItemId in list with the specified title in the specified site.
 
 ```sh
 m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle "Demo List" --listItemId 147
 ```
 
-Gets the attachments from list item with listItemId _147_ in list with id _0cd891ef-afce-4e55-b836-fce03286cccf_ in site _https://contoso.sharepoint.com/sites/project-x_
+Gets the attachments from list item with the specified listItemId in list with the specified id in the specified site.
 
 ```sh
 m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listId 0cd891ef-afce-4e55-b836-fce03286cccf --listItemId 147
 ```
 
-Gets the attachments from a specific list item in a specific list obtained by server-relative URL in a specific site
+Gets the attachments from a specific list item in a specific list obtained by server-relative URL in a specific site.
 
 ```sh
 m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listUrl /sites/project-x/Documents --listItemId 147
@@ -101,11 +101,8 @@ m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/
   Property | Value
   ---------|-------
   FileName | DummyDocument.docx
-  FileNameAsPath | {"DecodedUrl":"DummyDocument.docx"}
-  ServerRelativePath | {"DecodedUrl":"/Lists/Test/Attachments/236/DummyDocument.docx"}
   ServerRelativeUrl | /Lists/Test/Attachments/236/DummyDocument.docx
   ```
 
   </TabItem>
 </Tabs>
-
